Setup inicial do projeto

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      pt-BR
+      O manifest.json fornece metadados usados quando o aplicativo da web é instalado em um
+       dispositivo móvel ou desktop do usuário. Consulte https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
@@ -23,7 +26,20 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
+      pt-BR
+      Observe o uso de% PUBLIC_URL% nas tags acima.
+      Ele será substituído pelo URL da pasta `public` durante a compilação.
+      Somente arquivos dentro da pasta `public` podem ser referenciados a partir do HTML.
+
+      Ao contrário de "/favicon.ico" ou "favicon.ico", "% PUBLIC_URL% / favicon.ico" será
+      funcione corretamente com o roteamento do lado do cliente e um URL público não raiz.
+      Aprenda como configurar uma URL pública não raiz executando `npm run build`.
     -->
+
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
@@ -38,6 +54,16 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+      pt-BR
+      Este arquivo HTML é um modelo.
+      Se você o abrir diretamente no navegador, verá uma página vazia.
+
+      Você pode adicionar páginas da web, metatags ou análises a esse arquivo.
+      A etapa de construção colocará os scripts incluídos na tag <body>.
+
+      Para iniciar o desenvolvimento, execute `npm start` ou` yarn start`.
+      Para criar um pacote de produção, use `npm run build` ou` yarn build`.
+      
     -->
   </body>
 </html>
